<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/food" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_seperation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_item"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin"
        android:text="@string/item_recipe_name"
        app:layout_constraintBottom_toTopOf="@+id/description_item"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <TextView
        android:id="@+id/description_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_recipe_description"
        app:layout_constraintStart_toStartOf="@+id/name_item"
        app:layout_constraintTop_toBottomOf="@+id/view_seperation" />

    <ImageView
        android:id="@+id/star_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficulty_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_difficulty_title"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/difficulty_subtitle_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_difficulty_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficulty_item" />

    <TextView
        android:id="@+id/time_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_duration_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficulty_subtitle_item" />

    <TextView
        android:id="@+id/time_subtitle_item"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_duration_subtitle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_item" />



</androidx.constraintlayout.widget.ConstraintLayout>