<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/item_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meat" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_recipe_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_name"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_recipe_name"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_recipe_description_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_recipe_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_recipe_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_recipe_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_description_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_recipe_difficulty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_difficulty_title"
        app:layout_constraintStart_toStartOf="@+id/popup_recipe_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_description_subtitle"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_recipe_difficulty_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_difficulty_subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/popup_recipe_difficulty_title"
        app:layout_constraintStart_toEndOf="@+id/popup_recipe_difficulty_title"
        app:layout_constraintTop_toTopOf="@+id/popup_recipe_difficulty_title"
        android:layout_marginStart="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_recipe_duration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_duration_title"
        app:layout_constraintStart_toStartOf="@+id/popup_recipe_difficulty_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_difficulty_title"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_recipe_duration_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_recipe_duration_subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/popup_recipe_duration_title"
        app:layout_constraintStart_toEndOf="@+id/popup_recipe_duration_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_difficulty_title"
        android:layout_marginStart="@dimen/default_margin"/>


    <View
        android:id="@+id/view_seperation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_duration_title" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_seperation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_duration_title" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_seperation"
        app:layout_constraintTop_toBottomOf="@+id/popup_recipe_duration_title" />



</androidx.constraintlayout.widget.ConstraintLayout>